macro-template/tests/ui/source_duplicate_placeholder.stderr
error: duplicate source placeholder
 --> tests/ui/source_duplicate_placeholder.rs:6:13
  |
6 |         for Ty in [u16] {
  |             ^^
